z-index fix

--- a/assets/scss/modules/_navigation.scss
+++ b/assets/scss/modules/_navigation.scss
@@ -8,6 +8,10 @@
   @include hide-for(medium);
 }
 
+.site-header {
+    z-index: 99;
+}
+
 /* Mobile menu */
 
 .off-canvas {
@@ -27,7 +31,6 @@
 /* Tablet and desktop menu */
 .top-bar {
     border-bottom: 1px solid #DDDDDD;
-    z-index: 99;
 
   .menu .home a {
     font-size: 1rem;
